--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: bolt.diy Docs
+site_name: UnQBase Docs
 site_dir: ../site
 theme:
   name: material
@@ -31,25 +31,25 @@ theme:
     repo: fontawesome/brands/github
   # logo: assets/logo.png
   # favicon: assets/logo.png
-repo_name: bolt.diy
-repo_url: https://github.com/stackblitz-labs/bolt.diy
+repo_name: UnQBase
+repo_url: https://github.com/Sandeepgaddam5432/UnQBase
 edit_uri: ''
 
 extra:
   generator: false
   social:
     - icon: fontawesome/brands/github
-      link: https://github.com/stackblitz-labs/bolt.diy
-      name: bolt.diy
+      link: https://github.com/Sandeepgaddam5432/UnQBase
+      name: UnQBase
     - icon: fontawesome/brands/discourse
       link: https://thinktank.ottomator.ai/
-      name: bolt.diy Discourse
+      name: UnQBase Discourse
     - icon: fontawesome/brands/x-twitter
-      link: https://x.com/bolt_diy
-      name: bolt.diy on X
+      link: https://x.com/UnQBase
+      name: UnQBase on X
     - icon: fontawesome/brands/bluesky
-      link: https://bsky.app/profile/bolt.diy
-      name: bolt.diy on Bluesky
+      link: https://bsky.app/profile/UnQBase
+      name: UnQBase on Bluesky
 
 markdown_extensions:
   - pymdownx.highlight:
