--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,5 +1,5 @@
-appId: com.stackblitz.bolt.diy
-productName: Bolt Local
+appId: com.unqbase.app
+productName: UnQBase Local
 directories:
   buildResources: build
   output: dist
@@ -55,9 +55,9 @@ npmRebuild: false
 
 publish:
   provider: github
-  owner: Derek-X-Wang
-  repo: bolt.local
-  private: true
+  owner: Sandeepgaddam5432
+  repo: UnQBase
+  private: false
   releaseType: release
 
 electronDownload:
